news detail longread ready

--- a/news-one.html
+++ b/news-one.html
@@ -110,6 +110,7 @@
         </div>
       </div>
     </header>
+    <!-- brands slider -->
     <section class="brends">
       <div class="container">
         <ul class="brends__list owl-carousel">
@@ -140,6 +141,7 @@
         </ul>
       </div>
     </section>
+    <!-- top banner -->
     <section class="article-top-banner" style="background-image: url('img/news-banner.jpg');"></section>
     <!-- breadcrumbs -->
     <div class="breadcrumbs">
@@ -163,11 +165,11 @@
         </ol>
       </div>
     </div>
+    <!-- page title -->
+    <h1 class="main-title">ICG на выставке Intercharm 2018 в Москве</h1>
+    <!-- article with image -->
     <section class="news__main">
       <div class="container">
-        <h1 class="main-title">
-          ICG на выставке Intercharm 2018 в Москве
-        </h1>
         <div class="news__info">
           <div class="news__date">
             02.11.2019
@@ -214,6 +216,50 @@
         </div>
       </div>
     </section>
+    <!-- article without image -->
+    <section class="news__main">
+      <div class="container">
+        <div class="news__info">
+          <div class="news__date">
+            02.11.2019
+          </div>
+          <div class="news__text col--grow">
+            <p>
+              С 24 по 27 октября мы принимали участие в работе ежегодной осенней
+              выставки Intercharm в Москве. Это были 4 плодотворных дня работы.
+              На стенде помимо Флагманов направления - филлеров и биоревитализантов
+              Profillers, были представлены новинки линейки - мезококтейли Profillers
+              Care для коррекции проблем тела, лица и волос. На мастер-классах слушатели
+              могли познакомиться с авторскими методиками от сертифицированного тренера
+              компании Натальи Филатовой. Спасибо всем участникам, посетившим наш стенд!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi.
+              Ut placerat quam lectus. Curabitur dictum velit non lacus ornare tempor.
+              Nullam quis augue in leo aliquet malesuada sit amet eget eros. Sed laoreet
+              posuere velit sit amet varius.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus
+              mi. Ut placerat quam lectus. Curabitur dictum velit non lacus ornare tempor.
+              Nullam quis augue in leo aliquet malesuada sit amet eget eros. Sed laoreet
+              posuere velit sit amet varius. Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Nunc quis risus mi. Ut placerat quam lectus. Curabitur
+              dictum velit non lacus ornare tempor. Nullam quis augue in leo aliquet
+              malesuada sit amet eget eros. Sed laoreet posuere velit sit amet varius.
+            </p>
+            <p>
+              Сurabitur dictum velit non lacus ornare tempor. Nullam quis augue in leo
+              aliquet malesuada sit amet eget eros. Sed laoreet posuere velit sit amet
+              varius. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis
+              risus mi. Ut placerat quam lectus. urabitur dictum velit non lacus ornare
+              tempor. Nullam quis augue in leo aliquet malesuada sit amet eget eros.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- blockquote -->
     <section class="news__cite">
       <div class="container">
         <div class="cite__text">
@@ -235,18 +281,13 @@
         </div>
       </div>
     </section>
+    <!-- article image-left -->
     <section class="news__more">
       <div class="container">
         <div class="news__info">
           <div class="news__photos">
             <div class="news__photo">
               <img src="img/news2.jpg" srcset="img/news2@2x.jpg 900w, img/news2@3x.jpg 1200w" alt="">
-              <div class="news__signature">
-                Intercharm 2018
-              </div>
-            </div>
-            <div class="news__photo">
-              <img src="img/news1.jpg" srcset="img/news1@2x.jpg 900w, img/news1@3x.jpg 1200w" alt="">
               <div class="news__signature">
                 Intercharm 2018
               </div>
@@ -270,20 +311,55 @@
               Nullam quis augue in leo aliquet malesuada sit amet eget eros. Sed
               laoreet posuere velit sit amet varius.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- article image-right -->
+    <section class="news__more">
+      <div class="container">
+        <div class="news__info">
+          <div class="news__text">
             <p>
-              Сurabitur dictum velit non lacus ornare tempor. Nullam quis augue in
-              leo aliquet malesuada sit amet eget eros. Sed laoreet posuere velit
-              sit amet varius. Lorem ipsum dolor sit amet, consectetur adipiscing
-              elit. Nunc quis risus mi. Ut placerat quam lectus. urabitur dictum
-              velit non lacus ornare tempor. Nullam quis augue in leo aliquet malesuada
-              sit amet eget eros.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              quis risus mi. Ut placerat quam lectus. Curabitur dictum velit
+              non lacus ornare tempor. Nullam quis augue in leo aliquet
+              malesuada sit amet eget eros. Sed laoreet posuere velit sit amet
+              varius.
             </p>
             <p>
-              Nullam quis augue in leo aliquet malesuada sit amet
-              eget eros. Sed laoreet posuere velit sit amet varius. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Nunc quis risus mi. Ut placerat
-              quam lectus. urabitur dictum velit non lacus ornare tempor. Nullam
-              quis augue in leo aliquet malesuada sit amet eget eros.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis
+              risus mi. Ut placerat quam lectus. Curabitur dictum velit non lacus
+              ornare tempor. Nullam quis augue in leo aliquet malesuada sit amet
+              eget eros. Sed laoreet posuere velit sit amet varius. Lorem ipsum
+              dolor sit amet, consectetur adipiscing elit. Nunc quis risus mi. Ut
+              placerat quam lectus. Curabitur dictum velit non lacus ornare tempor.
+              Nullam quis augue in leo aliquet malesuada sit amet eget eros. Sed
+              laoreet posuere velit sit amet varius.
+            </p>
+          </div>
+          <div class="news__photos">
+            <div class="news__photo">
+              <img src="img/news2.jpg" srcset="img/news2@2x.jpg 900w, img/news2@3x.jpg 1200w" alt="">
+              <div class="news__signature">
+                Intercharm 2018
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- article no-image -->
+    <section class="news__more">
+      <div class="container">
+        <div class="news__info">
+          <div class="news__text col--grow">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              quis risus mi. Ut placerat quam lectus. Curabitur dictum velit
+              non lacus ornare tempor. Nullam quis augue in leo aliquet
+              malesuada sit amet eget eros. Sed laoreet posuere velit sit amet
+              varius.
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis
@@ -299,6 +375,7 @@
         </div>
       </div>
     </section>
+    <!-- slider -->
     <section class="news__slider">
       <div class="container">
         <div class="slider-wrapper">
@@ -329,6 +406,11 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- tags -->
+    <section class="tags">
+      <div class="container">
         <div class="news__tags">
           <a href="#" class="news__tag">2018</a>
           <a href="#" class="news__tag">Семинар</a>
@@ -339,6 +421,7 @@
         </div>
       </div>
     </section>
+    <!-- popular news -->
     <section>
       <div class="container">
         <h2 class="main-title">Популярные новости</h2>
