news detail longread ready

--- a/news-one.html
+++ b/news-one.html
@@ -166,7 +166,11 @@
       </div>
     </div>
     <!-- page title -->
-    <h1 class="main-title">ICG на выставке Intercharm 2018 в Москве</h1>
+    <section class="page-title">
+      <div class="container">
+        <h1 class="main-title">ICG на выставке Intercharm 2018 в Москве</h1>
+      </div>
+    </section>
     <!-- article with image -->
     <section class="news__main">
       <div class="container">
