--- a/index.html
+++ b/index.html
@@ -706,6 +706,7 @@
   </footer>
   <!-- scripts -->
   <script src="js/main.js"></script>
+  <script src="js/init.js"></script>
   <script>
   </script>
 </body>
