--- a/courses.html
+++ b/courses.html
@@ -232,11 +232,11 @@
       <div class="container">
         <div class="education__filters">
           <div class="cities__title">
-            <select name="cities-list" id="eduction-city">
-              <option value="msk">Все города</option>
-              <option value="msk">Москва</option>
-              <option value="spb">Санкт-Петербург</option>
-              <option value="msk">Екатеринбург</option>
+            <select name="cities-list" id="education-city">
+              <option value="all">Все города</option>
+              <option value="Москва">Москва</option>
+              <option value="Санкт-Петербург">Санкт-Петербург</option>
+              <option value="Екатеринбург">Екатеринбург</option>
             </select>
             <div class="select-side">
             </div>
@@ -271,9 +271,9 @@
                   <div class="control">
                   </div>
                   <a href="#" class="education__title">
-                    Аппаратный педикюр
+                    sudo
                   </a>
-                  <a href="#" class="calendar"></a>
+                  <a href="#" id="education-calendar" class="calendar" data-direction="sudo"></a>
                 </div>
                 <div class="education__content">
                   <div class="education__items">
