--- a/courses.html
+++ b/courses.html
@@ -707,7 +707,7 @@
       <div class="slider-wrapper">
         <div class="container">
           <div class="sales-courses__list owl-carousel">
-            <div class="sales-courses__item sales-courses__item--discont">
+            <div class="sales-courses__item sales-courses__item--discont" data-percent="-10%">
               <a href="#">
                 <div class="sales-courses__photo" style="background-image: url('img/courses4.jpg');"></div>
                 <div class="sales-courses__desc">
